chore: just following rest standards
